--- a/UnityLauncherPro/MainWindow.xaml
+++ b/UnityLauncherPro/MainWindow.xaml
@@ -244,6 +244,7 @@
 
 		<!-- main content : Tabs -->
 		<TabControl Grid.Row="1" x:Name="tabControl"  Background="{DynamicResource MainBackgroundColor}" BorderBrush="{x:Null}" Padding="0" Margin="0">
+			
 			<!-- Tab: Projects-->
 			<TabItem Header="Projects" Style="{DynamicResource TabItemStyle1}" Padding="0,0,0,0" Margin="-1,1,1,-1" BorderBrush="{x:Null}">
 				<Grid>
@@ -297,6 +298,14 @@
 							<DataGridTextColumn Binding="{Binding GITBranch}" ClipboardContentBinding="{x:Null}" Header="GITBranch" IsReadOnly="True"/>
 						</DataGrid.Columns>
 
+						<!-- right click context menu -->
+						<DataGrid.ContextMenu>
+							<ContextMenu>
+								<MenuItem Header="Copy Unity Version" />
+								<Separator />
+								<MenuItem Header="Menu item asdf" />
+							</ContextMenu>
+						</DataGrid.ContextMenu>
 
 						<!-- sample data for testing -->
 						<local:Project GITBranch="" Modified="" Title="M dfgh dfghMO" Path="A:/temp" Version="2099.1.2.3"/>
@@ -364,7 +373,76 @@
 			</TabItem>
 
 			<!-- Tab: Unitys -->
-			<TabItem Header="Unitys" Style="{DynamicResource TabItemStyle1}" Padding="0,0,0,0" Margin="-1,1,1,-1" BorderBrush="{x:Null}" Background="Black"/>
+			<TabItem Header="Unitys" Style="{DynamicResource TabItemStyle1}" Padding="0,0,0,0" Margin="-1,1,1,-1" BorderBrush="{x:Null}" Background="Black">
+				<Grid>
+					<!-- search box -->
+					<Grid Background="{DynamicResource TextBoxBackground}" HorizontalAlignment="Left" VerticalAlignment="Top" Width="222" Margin="6,5,0,0" Height="20"  >
+						<TextBlock Margin="3,2" MinWidth="100" Text="Search" Foreground="#7F919191" Visibility="{Binding ElementName=txtSearchBoxUnity, Path=Text.IsEmpty, Converter={StaticResource MyBoolToVisibilityConverter}}" Height="24" />
+						<TextBox MinWidth="100" CaretBrush="#FFE2E2E2" Name="txtSearchBoxUnity" Background="Transparent" BorderBrush="{x:Null}" Foreground="#FFC7C7C7" SelectionBrush="#FF003966" BorderThickness="0" Margin="2,2,0,0" UndoLimit="64" />
+						<Button Name="btnClearUnitySearch" Style="{StaticResource {x:Static ToolBar.ButtonStyleKey}}" BorderThickness="0"  HorizontalAlignment="Right" VerticalAlignment="Top" Height="23" Width="23" Background="Transparent" Padding="0,2" Visibility="Visible" BorderBrush="{x:Null}">
+							<TextBlock Text="❌" FontSize="8" Foreground="#FFC3C3C3" Padding="5,3,4,4" HorizontalAlignment="Center">
+								<TextBlock.Style>
+									<Style TargetType="TextBlock">
+										<Style.Triggers>
+											<DataTrigger Binding="{Binding ElementName=txtSearchBoxUnity, Path=Text}" Value="">
+												<Setter Property="Visibility" Value="Hidden"/>
+
+											</DataTrigger>
+											<DataTrigger Binding="{Binding ElementName=txtSearchBoxUnity, Path=Text}" Value="{x:Null}">
+												<Setter Property="Visibility" Value="Hidden"/>
+											</DataTrigger>
+										</Style.Triggers>
+									</Style>
+								</TextBlock.Style>
+							</TextBlock>
+						</Button>
+					</Grid>
+
+					<Button Style="{StaticResource CustomButton}" ToolTip="Refresh installations (F5)" x:Name="btnRefreshUnityList" Content="⟳" Height="22" Width="22" HorizontalAlignment="Right" VerticalAlignment="Top" FontSize="16" Background="#FF3F3F46" Foreground="#FFC1C1C1" Margin="0,4,3,0" Padding="1,-2,1,1" BorderBrush="{x:Null}"/>
+
+					<DataGrid x:Name="dataGridUnitys"  SelectionMode="Single" Margin="4,30,2,42" Background="{x:Null}" BorderBrush="{x:Null}" ColumnHeaderStyle="{StaticResource HeaderStyle}" Padding="0" HorizontalScrollBarVisibility="Disabled" HeadersVisibility="Column" Foreground="#FFD8D8D8" HorizontalGridLinesBrush="#4C000000" VerticalGridLinesBrush="#19000000">
+
+						<DataGrid.Columns>
+							<DataGridTextColumn Binding="{Binding Version}" ClipboardContentBinding="{x:Null}" Header="Version" IsReadOnly="True" MinWidth="123"/>
+							<DataGridTextColumn Binding="{Binding Path}" ClipboardContentBinding="{x:Null}" Header="Path" IsReadOnly="True"/>
+							<DataGridTextColumn Binding="{Binding Installed}" ClipboardContentBinding="{x:Null}" Header="Installed" IsReadOnly="True"/>
+							<DataGridTextColumn Binding="{Binding Platforms}" ClipboardContentBinding="{x:Null}" Header="Platforms" IsReadOnly="True"/>
+						</DataGrid.Columns>
+
+						<!-- right click context menu -->
+						<DataGrid.ContextMenu>
+							<ContextMenu>
+								<MenuItem Header="Copy Unity Version" />
+							</ContextMenu>
+						</DataGrid.ContextMenu>
+
+						<!-- sample data for testing -->
+						<local:UnityInstallations Version="3000.1.2f1" Path="c:/proggies/unity3000" Installed="12.12.2020" Platforms="" />
+					</DataGrid>
+
+					<!-- bottom buttoms row -->
+					<Grid VerticalAlignment="Bottom" Margin="4,0,8,5">
+						<Grid.ColumnDefinitions>
+							<ColumnDefinition Width="20*" />
+							<ColumnDefinition Width="45*" />
+							<ColumnDefinition Width="15*" />
+						</Grid.ColumnDefinitions>
+						<Grid.RowDefinitions>
+							<RowDefinition Height="32" />
+						</Grid.RowDefinitions>
+						<Button Grid.Column="0" Style="{StaticResource CustomButton}" x:Name="btnRunUnity" Background="{DynamicResource ButtonBackground}" Foreground="#FFC1C1C1" Margin="5,0,0,0" BorderBrush="{x:Null}">
+							<Label Foreground="#FFC1C1C1">_Upgrade</Label>
+						</Button>
+						<Button Grid.Column="1" Style="{StaticResource CustomButton}" x:Name="btnReleaseNotes" Background="{DynamicResource ButtonBackground}" Foreground="#FFC1C1C1" Margin="8,0,0,0" BorderBrush="{x:Null}" >
+							<Label Foreground="#FFC1C1C1">_Run Unity</Label>
+						</Button>
+						<Button Grid.Column="3" Style="{StaticResource CustomButton}" x:Name="btnExploreUnity" Background="{DynamicResource ButtonBackground}" Foreground="#FFC1C1C1" Margin="8,0,0,0" BorderBrush="{x:Null}" >
+							<Label Foreground="#FFC1C1C1">_Explore</Label>
+						</Button>
+
+					</Grid>
+				</Grid>
+			</TabItem>
 			<!-- Tab: Packages -->
 			<TabItem Header="Packages" Style="{DynamicResource TabItemStyle1}" Padding="0,0,0,0" Margin="-1,1,1,-1" BorderBrush="{x:Null}" Background="Black" />
 			<!-- Tab: Updates -->
